Fixed Text alignment on Mobile view port

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ p {
 
     }
 
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
 }
